--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <a href="1.html"  target="_blank">Rogue One: A Star Wars Story</a>
         </li>
         <li>
-            <a href="assests/2.html"   target="_blank">Solo: A Star Wars Story</a>
+            <a href="assests/2.html">Solo: A Star Wars Story</a>
         </li>
         <li>
             <a href="assests/3.html"   target="_blank">Star Wars: The Rise of Skywalker</a>
